# quimby

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
debian/: changelog  control  copyright  quimby-gtk-immodule.install  quimby-gtk-immodule.postinst  quimby-gtk-immodule.postrm  rules
macros/: immodulesdir.m4
po/: ChangeLog  POTFILES  POTFILES.in
src/: Makefile.am  Makefile.in  chording.c  chording.h  dict.json  im-extra-intl.h  im-quimby.c  im-quimby.h
